created ScreenLayout which applies to all apps and any new apps that automatically adjust to the screen size and device of the screen

--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "the-mobile-dev-app",
     "slug": "the-mobile-dev-app",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/images/icon.png",
     "scheme": "themobiledevapp",
     "userInterfaceStyle": "automatic",
@@ -19,7 +19,8 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.davonno2026.themobiledevapp"
     },
     "web": {
       "output": "static",
@@ -38,11 +39,19 @@
             "backgroundColor": "#000000"
           }
         }
-      ]
+      ],
+      "expo-sqlite",
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "24c5ccf4-0f8c-4d96-87d2-fddaa3403cafgl"
+      }
     }
   }
 }
